--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1305,11 +1305,11 @@ body[data-color='yellow'] {
   display: flex;
   flex-direction: column;
   margin-right: 24px;
-  margin-bottom: 20px;
+  margin-bottom: 16px;
 }
 
 .select-control {
-  padding: 6px 16px;
+  padding: 8px 16px;
   padding-right: 62px;
   font-family: "Inter", "Arial", sans-serif;
   font-weight: 400;
@@ -1367,7 +1367,6 @@ body[data-color='yellow'] {
   list-style-type: none;
   margin: 0;
   padding: 8px 24px;
-  padding-bottom: 9px;
   display: flex;
   justify-content: space-between;
   background: rgba(252, 252, 252, 0.3);
@@ -1429,7 +1428,7 @@ body[data-color='yellow'] {
   height: 2px;
   background-color: rgba(86, 92, 102, 0.3);
   border-radius: 2px;
-  top: -3px;
+  top: 0;
 }
 
 .range-bar {
