--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2009,6 +2009,7 @@ body[data-color="yellow"] {
   box-sizing: border-box;
   width: 324px;
   padding: 14px 16px;
+  margin-top: 0;
   border: 1px solid #b9b9b9;
   border-radius: 4px;
 }
@@ -2057,10 +2058,13 @@ input[type="search"]::-webkit-search-cancel-button {
   padding-bottom: 52px;
   width: 420px;
   right: -2px;
+  visibility: visible;
+  opacity: 1;
+  z-index: 1;
 }
 
 .password-input {
-  font-size: 21px;
+  font-size: 13px;
   line-height: 22px;
   padding-top: 9px;
 }
