--- a/styles/styles.css
+++ b/styles/styles.css
@@ -206,7 +206,7 @@ body[data-color="yellow"] {
 
 .header-link:active {
   outline: none;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .content-wrapper {
@@ -659,7 +659,7 @@ body[data-color="yellow"] {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  background-color: #FF2F64;
+  background-color: #ff2f64;
   cursor: pointer;
   border: 2px solid transparent;
   transition: all 100ms ease-out;
@@ -673,28 +673,28 @@ body[data-color="yellow"] {
 
 .add-to-cart:focus {
   outline: none;
-  border-color: #2D3440;
+  border-color: #2d3440;
   background-image: url("../images/add-to-cart.svg");
 }
 
 .add-to-cart:hover {
   outline: none;
-  border-color: #FF2F64;
+  border-color: #ff2f64;
   background-color: rgba(252, 252, 252, 0.3);
   background-image: url("../images/add-to-cart-black.svg");
 }
 
 .add-to-cart:active {
   outline: none;
-  border-color: #FF2F64;
+  border-color: #ff2f64;
   background-color: #FFCBD8;
   background-image: url("../images/add-to-cart-black.svg");
 }
 
 .add-to-cart:disabled {
   pointer-events: none;
-  border-color: #B9B9B9;
-  background-color: #B9B9B9;
+  border-color: #b9b9b9;
+  background-color: #b9b9b9;
   background-image: url("../images/add-to-cart-grey.svg");
 }
 
@@ -1262,12 +1262,12 @@ body[data-color="yellow"] {
   margin: 0;
   font-size: 12px;
   line-height: 16px;
-  color: #2D3440;
+  color: #2d3440;
 }
 
 .made-by-link {
   text-decoration: none;
-  color: #2D3440;
+  color: #2d3440;
   border-bottom: 1px solid rgba(17.65%, 20.39%, 25.1%, 0.5);
 }
 
@@ -1473,38 +1473,38 @@ body[data-color="yellow"] {
   position: absolute;
   left: 41px;
   height: 2px;
-  background-color: #565C66;
+  background-color: #565c66;
   width: 56px;
 }
 
 .range-toggle {
   position: absolute;
   top: -7px;
-  border: 6px solid #2D3440;
+  border: 6px solid #2d3440;
   width: 16px;
   height: 16px;
   padding: 0;
   margin: 0;
   border-radius: 50%;
   cursor: pointer;
-  background-color: #FCFCFC;
+  background-color: #fcfcfc;
   transition: all 100ms ease-out;
 }
 
 .range-toggle:focus {
-  outline: 2px solid #2D3440;
-  border-color: #FCFCFC;
-  background-color: #2D3440;
+  outline: 2px solid #2d3440;
+  border-color: #fcfcfc;
+  background-color: #2d3440;
 }
 
 .range-toggle:hover {
-  border-color: #FCFCFC;
-  background-color: #2D3440;
+  border-color: #fcfcfc;
+  background-color: #2d3440;
 }
 
 .range-toggle:active {
-  border-color: #2D3440;
-  background-color: #2D3440;
+  border-color: #2d3440;
+  background-color: #2d3440;
 }
 
 .toggle-min {
@@ -1667,21 +1667,21 @@ body[data-color="yellow"] {
 
 .catalog-filter-submit:focus {
   outline: none;
-  background-color: #FDD5DF;
+  background-color: #fdd5df;
   box-shadow: 0 0 0 2px #2d3440;
-  color: #2D3440;
+  color: #2d3440;
 }
 
 .catalog-filter-submit:hover {
-  background-color: #FCFCFC;
+  background-color: #fcfcfc;
   box-shadow: 0 0 0 2px #fec7d5;
-  color: #2D3440;
+  color: #2d3440;
 }
 
 .catalog-filter-submit:active {
-  background-color: #FDD5DF;
-  box-shadow: 0 0 0 2px #FDD5DF;
-  color: #2D3440;
+  background-color: #fdd5df;
+  box-shadow: 0 0 0 2px #fdd5df;
+  color: #2d3440;
 }
 
 .catalog-filter-submit:disabled {
@@ -1789,7 +1789,7 @@ body[data-color="yellow"] {
   min-width: 24px;
   min-height: 24px;
   border-radius: 50%;
-  color: #2D3440;
+  color: #2d3440;
   text-decoration: none;
   font-weight: 400;
   font-size: 16px;
@@ -1799,7 +1799,7 @@ body[data-color="yellow"] {
 
 .pagination-link:focus {
   outline: none;
-  box-shadow: inset 0 0 0 1px #2D3440;
+  box-shadow: inset 0 0 0 1px #2d3440;
   background: rgba(252, 252, 252, 0.3);
 }
 
@@ -1808,11 +1808,11 @@ body[data-color="yellow"] {
 }
 
 .pagination-link:active {
-  box-shadow: inset 0 0 0 1px#FCFCFC;
+  box-shadow: inset 0 0 0 1px#fcfcfc;
 }
 
 .pagination-link.active {
-  background-color: #FCFCFC;
+  background-color: #fcfcfc;
 }
 
 .pagination-button {
@@ -1884,7 +1884,7 @@ body[data-color="yellow"] {
   font-weight: 700;
   font-size: 14px;
   line-height: 20px;
-  color: #2D3440;
+  color: #2d3440;
 }
 
 .submenu-text::before {
@@ -1894,7 +1894,7 @@ body[data-color="yellow"] {
   bottom: -4px;
   width: calc(100% - 32px);
   height: 1px;
-  background-color: #B9B9B9;
+  background-color: #b9b9b9;
   transform: translate(-50%, 0);
 }
 
@@ -1915,17 +1915,17 @@ body[data-color="yellow"] {
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: #2D3440;
+  color: #2d3440;
   transition: all 100ms ease-out;
   text-decoration: none;
 }
 
 .submenu-item:hover {
-  background-color: #FFCBD8;
+  background-color: #ffcbd8;
 }
 
 .submenu-item:active {
-  background-color: #FF7799;
+  background-color: #ff7799;
 }
 
 .submenu-item:focus-within {
@@ -2230,7 +2230,7 @@ input[type="search"]::-webkit-search-cancel-button {
   min-height: 545px;
   width: 100%;
   z-index: 3;
-  background-color: #FCFCFC;
+  background-color: #fcfcfc;
   box-shadow: 0 15px 40px rgba(45, 52, 64, 0.12);
   border-radius: 8px;
   transform: translate(-50%, -50%);
@@ -2260,7 +2260,7 @@ input[type="search"]::-webkit-search-cancel-button {
   width: 17px;
   height: 1px;
   border-radius: 1px;
-  background-color: #2D3440;
+  background-color: #2d3440;
   transform: translate(-50%, -50%) rotate(45deg);
 }
 
@@ -2272,7 +2272,7 @@ input[type="search"]::-webkit-search-cancel-button {
   width: 17px;
   height: 1px;
   border-radius: 1px;
-  background-color: #2D3440;
+  background-color: #2d3440;
   transform: translate(-50%, -50%) rotate(-45deg);
 }
 
@@ -2302,8 +2302,8 @@ input[type="search"]::-webkit-search-cancel-button {
   width: 100%;
   height: 48px;
   padding: 14px 16px;
-  background-color: #FFFFFF;
-  border: 1px solid #B9B9B9;
+  background-color: #ffffff;
+  border: 1px solid #b9b9b9;
   border-radius: 4px;
   font-family: "Inter", "Arial", sans-serif;
   font-weight: 400;
